--- a/client/src/components/Chat/chat.module.css
+++ b/client/src/components/Chat/chat.module.css
@@ -2,7 +2,7 @@
 .chat {
 	display: flex;
 	flex-direction: column;
-	width: 300px;
+	min-width: 300px;
 	height: 100vh;
 	border: 1px solid #ccc;
 	padding: 10px;
@@ -26,7 +26,7 @@
 	border-radius: 5px;
 }
 .messages > li:nth-child(odd) {
-	background: #383838;
+	background: #1323ad;
 	color: #ccc;
 }
 
