--- a/client/src/Pages/WhiteBoard/whiteboard.module.css
+++ b/client/src/Pages/WhiteBoard/whiteboard.module.css
@@ -1,5 +1,8 @@
 .container {
 	display: flex;
+	width: 100vw;
+	height: 92vh;
 	justify-content: space-between;
 	align-items: center;
+	padding-top: 5px;
 }
