--- a/client/src/components/Chat/chat.module.css
+++ b/client/src/components/Chat/chat.module.css
@@ -3,10 +3,11 @@
 	display: flex;
 	flex-direction: column;
 	min-width: 300px;
-	height: 100vh;
+	height: 100%;
 	border: 1px solid #ccc;
 	padding: 10px;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	border-radius: 10px 0 0 0;
 }
 
 /* Style for the messages list */
@@ -59,4 +60,7 @@
 }
 .btn:disabled {
 	background-color: #ccc;
+}
+.btn:not(:disabled):hover {
+	background-color: #0069d9;
 }
