--- a/client/src/components/Toolbox/toolbox.module.css
+++ b/client/src/components/Toolbox/toolbox.module.css
@@ -2,10 +2,11 @@
 	display: flex;
 	flex-direction: column;
 	min-width: 300px;
-	height: 100vh;
+	height: 100%;
 	border: 1px solid #ccc;
 	padding: 10px;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	border-radius: 0 10px 0 0;
 }
 
 .toolbox .status {
@@ -84,4 +85,8 @@
 .toolbox button:disabled {
 	background-color: gray;
 	cursor: not-allowed;
+}
+
+.toolbox button:hover {
+	background-color: #0069d9;
 }
