--- a/client/src/components/PopUp/popUp.module.css
+++ b/client/src/components/PopUp/popUp.module.css
@@ -1,4 +1,4 @@
-.sign {
+.popup {
 	min-height: 50vh;
 	width: 80vw;
 	max-width: 400px;
@@ -10,4 +10,13 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	z-index: 10;
+}
+
+.close {
+	position: absolute;
+	top: 0.5rem;
+	right: 0.5rem;
+	cursor: pointer;
+	font-size: 1.5rem;
 }
