--- a/client/src/components/JoinRoom/joinroom.module.css
+++ b/client/src/components/JoinRoom/joinroom.module.css
@@ -1,15 +1,10 @@
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	flex-grow: 1; /* This makes .wrapper take up the available vertical space */
 }
 
-.headContainer {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
 .heading {
 	text-align: center;
 	font-size: 1.5rem;
@@ -19,7 +14,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	flex-grow: 1;
 }
 
 .inputContainer {
@@ -41,7 +35,4 @@
 
 .actoinContainer a {
 	color: black;
-}
-.hoverUnderline:hover {
-	text-decoration: underline;
 }
