--- a/client/src/components/PopUp/popUp.module.css
+++ b/client/src/components/PopUp/popUp.module.css
@@ -2,7 +2,8 @@
 	min-height: 50vh;
 	width: 80vw;
 	max-width: 400px;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(0, 0, 0, 0.8);
+	color: white;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
@@ -10,7 +11,8 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	z-index: 10;
+	z-index: 9999;
+	padding: 50px;
 }
 
 .close {
@@ -19,4 +21,7 @@
 	right: 0.5rem;
 	cursor: pointer;
 	font-size: 1.5rem;
+	color: white;
+	background-color: white;
+	border-radius: 50%;
 }
