--- a/client/src/components/Chat/chat.module.css
+++ b/client/src/components/Chat/chat.module.css
@@ -3,16 +3,22 @@
 	display: flex;
 	flex-direction: column;
 	min-width: 200px;
+	max-width: 300px;
 	height: 100%;
 	border: 1px solid #ccc;
 	padding: 10px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	/* box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); */
 	border-radius: 10px 0 0 0;
 }
 
 /* Style for the messages list */
 .messages {
+	max-width: 100%;
+	flex-grow: 0;
+	display: flex;
+	flex-direction: column;
 	list-style-type: none;
+	width: 100%;
 	padding: 0;
 	margin: 0;
 	flex: 1; /* Take remaining vertical space */
@@ -20,13 +26,20 @@
 }
 
 /* Style for each individual message */
-.messages li {
-	padding: 5px;
+.userMessage,
+.otherMessage {
+	max-width: 90%;
+	padding: 5px 10px;
 	margin-bottom: 5px;
 	background-color: #d1d0d0;
 	border-radius: 5px;
+	overflow-wrap: break-word;
 }
-.messages > li:nth-child(odd) {
+.userMessage {
+	margin-left: auto;
+}
+.otherMessage {
+	margin-right: auto;
 	background: #1323ad;
 	color: #ccc;
 }
@@ -34,13 +47,14 @@
 /* Style for the input form */
 .form {
 	display: flex;
+	max-width: 100%;
+	width: 100%;
+	justify-content: space-between;
 	margin-top: 10px;
 	backdrop-filter: blur(10px);
 }
-
-/* Style for the input field */
 .input {
-	flex: 1;
+	width: 70%;
 	padding: 5px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
@@ -48,9 +62,8 @@
 .input:focus {
 	outline: none;
 }
-
-/* Style for the send button */
 .btn {
+	width: 25%;
 	background-color: #007bff;
 	color: #fff;
 	border: none;
@@ -58,6 +71,7 @@
 	padding: 5px 10px;
 	cursor: pointer;
 }
+
 .btn:disabled {
 	background-color: #ccc;
 }
