--- a/client/src/Pages/HomePage/home.module.css
+++ b/client/src/Pages/HomePage/home.module.css
@@ -4,10 +4,10 @@
 
 	background-color: #f5f5f5;
 
-	margin: 20px;
+	margin: 25px;
 	padding: 20px;
 	border: 1px solid #ccc;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
 
 	display: grid;
@@ -34,18 +34,44 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	padding: 20px;
 
 	display: flex;
 	gap: 20px;
 }
+.user,
 .demo {
 	grid-row: 1;
 	grid-column: 3;
 	background-color: white;
-	padding: 20px;
+	padding: 2.5rem;
 	border-radius: 10px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	display: flex;
+}
+.user {
+	gap: 10px;
+	align-items: center;
+}
+.user span {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+	gap: 5px;
+	justify-content: center;
+	/* align-items: center; */
+}
+.user span h2 {
+	font-size: 1.5rem;
+}
+.user span p {
+	font-size: 1rem;
+	max-width: 95%;
+	margin-left: auto;
+	color: #555;
+}
+.demo {
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
@@ -57,7 +83,7 @@
 	grid-row: 1;
 	grid-column: 4;
 	background-color: white;
-	padding: 20px;
+	padding: 2.5rem;
 	border-radius: 10px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -90,27 +116,28 @@
 	max-height: 100%;
 }
 .about {
-	flex-grow: 5;
+	flex-grow: 1;
 	display: flex;
 	gap: 20px;
 }
 .header {
-	flex: 4;
+	flex: 1;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	background-color: white;
-	padding: 20px;
+	padding: 2.5rem;
 	border-radius: 10px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .features {
-	flex: 5;
+	flex: 2;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-around;
 	gap: 20px;
+	flex-wrap: nowrap;
 	/* display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-gap: 20px; */
@@ -128,6 +155,7 @@
 	padding: 20px;
 	border-radius: 10px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	/* white-space: nowrap; */
 }
 .cta {
 	flex-grow: 1;
@@ -158,20 +186,32 @@
 	color: #666;
 }
 
-/* Header section */
-
 .header h1 {
-	font-size: 24px;
+	font-size: 2rem;
 	margin: 0;
 }
 
 .header b {
-	color: #007bff;
+	font-size: 2.5rem;
+	/* color: #0084ff; */
 }
 
 .header p {
-	font-size: 16px;
-	color: #666;
+	margin-top: 20px;
+	text-align: justify;
+	line-height: 1.5rem;
+	color: #555;
+}
+.header i {
+	font-size: 1.5rem;
+	color: #ccc;
+	margin-top: 20px;
+	text-align: center;
+}
+
+/* Additional styles for paragraph content */
+.headerContent {
+	margin-top: 20px;
 }
 
 /* Feature section */
@@ -200,9 +240,17 @@
 .points {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
 }
-.point {
-	display: flex;
-	gap: 10px;
+.profileImage {
+	border-radius: 50%;
+	object-fit: cover;
+	width: 8rem;
+	height: 8rem;
+	border-radius: 50%;
+	object-fit: cover;
+	transition: transform 0.3s ease;
+	border: 2px solid black;
+}
+.profileImage:hover {
+	transform: scale(1.1);
 }
