--- a/client/src/components/UserPanel/userpanel.module.css
+++ b/client/src/components/UserPanel/userpanel.module.css
@@ -40,6 +40,9 @@
 .hovered .user-image {
 	transform: scale(1.1);
 }
+.user-image:hover {
+	transform: scale(1.1);
+}
 
 .edit-icon {
 	position: absolute;
