--- a/client/src/Pages/HomePage/home.module.css
+++ b/client/src/Pages/HomePage/home.module.css
@@ -1,3 +1,23 @@
+/*common stlyes*/
+.styleBox {
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.flexContainer {
+	display: flex;
+	gap: 20px;
+}
+
+.flexCenter {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
 /* Common styles */
 .homepage {
 	flex-grow: 1;
@@ -17,9 +37,9 @@
 	grid-column-gap: 20px;
 }
 
-.homepage * {
-	/* border: solid black 2px; */
-}
+/* .homepage * { */
+/* border: solid black 2px; */
+/* } */
 /* .homepage > div {
 	background-color: white;
 	padding: 20px;
@@ -150,12 +170,14 @@
 	margin-left: auto;
 }
 .feature {
+	display: flex;
+	flex-direction: column;
+
 	width: 90%;
 	background-color: white;
 	padding: 20px;
 	border-radius: 10px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	/* white-space: nowrap; */
 }
 .cta {
 	flex-grow: 1;
@@ -216,15 +238,6 @@
 
 /* Feature section */
 
-.feature {
-	background-color: white;
-	padding: 20px;
-	border-radius: 10px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	display: flex;
-	flex-direction: column;
-}
-
 .feature h2 {
 	font-size: 1.2rem;
 	margin-top: 0;
@@ -246,7 +259,6 @@
 	object-fit: cover;
 	width: 8rem;
 	height: 8rem;
-	border-radius: 50%;
 	object-fit: cover;
 	transition: transform 0.3s ease;
 	border: 2px solid black;
