--- a/client/src/components/Signup/style.module.scss
+++ b/client/src/components/Signup/style.module.scss
@@ -1,8 +1,11 @@
+@import 'variables';
+
+/* Styles */
 .wrapper {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	flex-grow: 1; /* This makes .wrapper take up the available vertical space */
+	flex-grow: 1;
 }
 
 .headContainer {
@@ -10,20 +13,21 @@
 	flex-direction: column;
 	justify-content: space-between;
 }
+
 .heading {
 	text-align: center;
 	font-size: 1.5rem;
 }
 
 .dummyLogin {
-	margin: 0; /* Reset default margin */
-	flex-grow: 1; /* Allow the element to take up remaining space */
-	text-align: right; /* Align the content to the right */
+	margin: 0;
+	flex-grow: 1;
+	text-align: right;
 	cursor: pointer;
-}
 
-.dummyLogin:hover {
-	text-decoration: underline;
+	&:hover {
+		text-decoration: underline;
+	}
 }
 
 .form {
@@ -35,24 +39,30 @@
 
 .inputContainer {
 	margin: 10px;
+
+	input {
+		width: 100%;
+		background-color: $input-bg-color;
+		color: $text-black;
+		padding: 10px;
+		border-radius: $border-radius;
+		display: block;
+		border: none;
+	}
 }
 
-.inputContainer input {
-	width: 100%;
-	background-color: #e8f0fe;
-	color: black;
-	padding: 10px;
-	border-radius: 0.5rem;
-	display: block;
-	border: 0px none;
-}
 .actoinContainer {
 	text-align: right;
+
+	a {
+		color: $text-black;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 }
 
-.actoinContainer a {
-	color: black;
-}
 .hoverUnderline:hover {
 	text-decoration: underline;
 }
