--- a/client/src/components/Canvas/style.module.scss
+++ b/client/src/components/Canvas/style.module.scss
@@ -3,8 +3,8 @@
 
 /* Styles */
 .canvas {
-	background-color: $canvas-bg-color;
-	border-radius: $border-radius;
-	text-align: center;
-	box-shadow: $canvas-box-shadow;
+	@include main-box;
+	padding: 0px;
+	margin: 0px;
+	background-color: $canvasColor;
 }
