--- a/client/src/Pages/DashBoard/style.module.scss
+++ b/client/src/Pages/DashBoard/style.module.scss
@@ -12,7 +12,7 @@
 	flex-grow: 1;
 	max-width: 400px;
 	height: 100%;
-	@include common-box;
+	@include main-box;
 	padding: 20px;
 }
 
@@ -20,11 +20,7 @@
 .rooms {
 	flex-grow: 3;
 
-	@include common-box;
-	background-color: $homePageBackgroundColor;
-	box-shadow: 5px 5px 5px $shadowColor;
-	margin: 0px $gap;
-
+	@include main-box;
 	@include flex-center;
 	justify-content: space-evenly;
 	// max-width: 1000px;
@@ -53,6 +49,7 @@
 		h2 {
 			text-align: center;
 			font-size: 1.5rem;
+			margin-bottom: $border-padding;
 		}
 	}
 }
