--- a/client/src/Pages/HomePage/style.module.scss
+++ b/client/src/Pages/HomePage/style.module.scss
@@ -7,14 +7,11 @@
 	max-width: 100%;
 	max-height: 84vh;
 
-	@include common-box;
-	background-color: $homePageBackgroundColor;
-	box-shadow: 5px 5px 5px $shadowColor;
-	margin: 0px $gap;
+	@include main-box;
 
 	display: grid;
 	grid-template-rows: repeat(3, 1fr);
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(5, 1fr);
 	gap: $gap;
 }
 .container {
@@ -23,7 +20,7 @@
 	justify-content: space-between;
 
 	grid-row: 1 / span 3;
-	grid-column: 1 / span 2;
+	grid-column: 1 / span 3;
 
 	.about {
 		flex-grow: 1;
@@ -33,42 +30,39 @@
 		max-height: 80%;
 
 		.header {
-			@include common-box;
+			// @include common-box;
 			@include flex-center;
 			flex-direction: column;
 
 			height: 100%;
 			text-align: center;
 
-			max-width: 40%;
+			max-width: 50%;
 
 			.headerContent {
 				@include flex-center;
 				flex-direction: column;
-				justify-content: space-evenly;
-				padding: 20px;
+				height: 100%;
 				h1 {
+					flex: 1;
 					@include flex-center;
 					flex-direction: column;
-					justify-content: space-around;
 					gap: 0px;
-					color: $headingColor;
-					font-size: $headerFontSize;
+					color: $textColor2;
+
+					font-size: 2rem;
 					b {
-						color: $blue3;
-						font-size: $headerFontSize + 0.5;
+						font-size: 2.5rem;
+						color: $textColor1;
 					}
 					i {
 						font-size: 1rem;
-						color: $headingDescColor;
-						text-align: right;
 					}
 				}
-				p {
-					font-size: $paragraphFontSize;
-					color: $paragraphColor;
-					text-align: justify;
-					padding: 1rem;
+				img {
+					width: 100%;
+					object-fit: cover;
+					border-radius: $border-radius;
 				}
 			}
 		}
@@ -78,11 +72,12 @@
 			flex-direction: column;
 			justify-content: space-evenly;
 
-			width: 60%;
+			width: 50%;
 
-			// flex-wrap: nowrap;
+			flex-wrap: nowrap;
 			.feature {
 				@include common-box;
+				border-color: $themeInverseColor;
 				width: 90%;
 				h2 {
 					font-size: 1rem;
@@ -102,20 +97,20 @@
 	}
 
 	.cta {
-		// flex-grow: 1;
 		@include common-box;
+		border: none;
+		padding: $border-padding 0px;
 		@include flex-center;
+		justify-content: space-evenly;
 		max-height: 20%;
 		width: 100%;
 		text-align: center;
 
 		h2 {
-			font-size: 1rem;
-			max-width: 40%;
+			max-width: 50%;
 		}
 		p {
-			font-size: 1rem;
-			max-width: 60%;
+			max-width: 50%;
 		}
 	}
 }
@@ -123,22 +118,14 @@
 .user,
 .demo {
 	grid-row: 1;
-	grid-column: 3;
+	grid-column: 4;
 
 	@include common-box;
 	@include flex-center;
 	flex-direction: column;
 
-	h2 {
-		font-size: 1.5rem;
-	}
+	margin: $border-padding 0px 0px $border-padding;
 
-	p {
-		font-size: 1rem;
-		max-width: 95%;
-		margin-left: auto;
-		color: $textColor3;
-	}
 	.profileImage {
 		border-radius: 50%;
 		object-fit: cover;
@@ -146,11 +133,15 @@
 		height: 8rem;
 		object-fit: cover;
 		transition: transform 0.3s ease;
-		border: 2px solid black;
+		border: 2px solid $textColor1;
 
 		&:hover {
 			transform: scale(1.1);
 		}
+	}
+	p {
+		max-width: 95%;
+		margin-left: auto;
 	}
 }
 
@@ -158,25 +149,20 @@
 	@include common-box;
 	@include flex-center;
 	align-items: stretch;
+	margin: $border-padding $border-padding 0px 0px;
 }
 
 .imageDiv {
-	@include common-box;
-
 	grid-row: 2 / span 2;
-	grid-column: 3 / span 2;
-	flex: 2;
-	display: grid;
-	justify-content: center;
-	align-items: center;
+	grid-column: 4 / span 2;
+
+	@include common-box;
+	padding: 0px;
 	border-radius: 50px;
 
-	// .image {
-	// 	max-width: 100%;
-	// 	max-height: 100%;
-	// }
-	// .points {
-	// 	display: flex;
-	// 	flex-direction: column;
-	// }
+	img {
+		width: 100%;
+		height: 100%;
+		border-radius: 50px;
+	}
 }
