--- a/client/src/components/Footer/style.module.scss
+++ b/client/src/components/Footer/style.module.scss
@@ -8,18 +8,10 @@
 
 	max-width: 100%;
 	max-height: 8vh;
+	min-height: 4vh;
 
-	bottom: 0;
-
-	background: $footerBackgroundColor;
 	box-shadow: $footerBorderShadow;
 	border-radius: $footerBorderRadius;
-	padding: 0.5rem;
-
-	color: $footerTextColor;
-	font-size: $footerFontSize;
-
-	b {
-		color: $footerCenterColor;
-	}
+	padding: 0px 1rem;
+	color: $textColor2;
 }
