--- a/client/src/components/JoinRoom/style.module.scss
+++ b/client/src/components/JoinRoom/style.module.scss
@@ -23,13 +23,7 @@
 	margin: 10px;
 
 	input {
-		width: 100%;
-		background-color: $input-bg-color;
-		color: black;
-		padding: 10px;
-		border-radius: $border-radius;
-		display: block;
-		border: none;
+		@include input;
 	}
 }
 
