--- a/client/src/components/Navbar/style.module.scss
+++ b/client/src/components/Navbar/style.module.scss
@@ -9,34 +9,25 @@
 	max-width: 100vw;
 	max-height: 8vh;
 
-	background: $nabBarColor;
 	box-shadow: $navBorderShadow;
-	border-radius: $navBarBorderRadius;
+	border-radius: 0px 0px $border-radius $border-radius;
 	padding: 0px 1rem;
 }
 .navHeader {
 	@include flex-center;
 
 	h1 {
+		color: $textColor2;
 		font-style: italic;
 		font-size: $navheadingsize;
-		color: $navHeadingColor;
-		&:hover {
-			color: $navHeadingColorHover;
-		}
 	}
 
 	.navToggle {
-		color: $navHeadingColor;
 		background: transparent;
 		border: none;
 		cursor: pointer;
 		transition: $transition;
 
-		&:hover {
-			color: $navHeadingColorHover;
-			transform: rotate(90deg);
-		}
 		@media screen and (min-width: 800px) {
 			display: none;
 		}
@@ -65,8 +56,7 @@
 	}
 
 	li {
-		font-size: $navLinkFontSize;
-		color: $navLinkColor;
+		color: $textColor2;
 		text-transform: capitalize;
 		letter-spacing: $spacing;
 		padding: 0.5rem 0.5rem;
@@ -76,9 +66,8 @@
 		white-space: nowrap;
 
 		&:hover {
-			background: $navLinkBackgroundColorHover;
-			color: $navLinkColorHover;
-			box-shadow: $box-shadow;
+			color: $primaryColor2;
+			background: $primaryColor;
 		}
 	}
 }
@@ -87,30 +76,21 @@
 	@include icon;
 }
 
-.user {
-	@include common-box;
-	@include flex-center;
-	background-color: $navUserBackgroundColor;
-	gap: 5px;
-	padding: 1px 0.5rem;
-	span {
-		p {
-			text-align: center;
-			font-size: $navUserNameSize;
-			color: $navUserNameColor;
-		}
+span {
+	p {
+		text-align: center;
 	}
+}
 
-	.profileImage {
-		width: 2rem;
-		height: 2rem;
-		border-radius: 50%;
-	}
+.profileImage {
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 50%;
+}
 
-	.signOutButton {
-		@include button-main;
-		padding-top: 1px;
-		padding-bottom: 1px;
-		white-space: nowrap;
-	}
+.signOutButton {
+	@include button-main;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	white-space: nowrap;
 }
