--- a/client/src/components/PopUp/style.module.scss
+++ b/client/src/components/PopUp/style.module.scss
@@ -6,9 +6,10 @@
 	min-height: 50vh;
 	width: 80vw;
 	max-width: 400px;
-	background-color: $popup-bg-color;
-	color: $popup-color;
+	background-color: rgba(0, 0, 0, 0.8);
+	color: $textInverse;
 	border-radius: $border-radius;
+	border: 1px solid $themeInverseColor;
 	display: flex;
 	flex-direction: column;
 	position: absolute;
@@ -16,16 +17,15 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 9999;
-	padding: $popup-padding;
+	padding: 50px;
 
 	.close {
+		@include icon;
+		color: $black;
+		background-color: $white;
 		position: absolute;
 		top: 0.5rem;
 		right: 0.5rem;
-		cursor: pointer;
-		font-size: 1.5rem;
-		color: $close-color;
-		background-color: $close-bg-color;
 		border-radius: $border-radius;
 	}
 }
