--- a/client/src/components/Sign/style.module.scss
+++ b/client/src/components/Sign/style.module.scss
@@ -6,7 +6,7 @@
 	min-height: 50vh;
 	width: 80vw;
 	max-width: 400px;
-	background-color: $sign-bg-color;
+	background-color: rgba(0, 0, 0, 0.7);
 	border-radius: $border-radius;
 	display: flex;
 	flex-direction: column;
