--- a/client/src/components/Signup/style.module.scss
+++ b/client/src/components/Signup/style.module.scss
@@ -41,13 +41,7 @@
 	margin: 10px;
 
 	input {
-		width: 100%;
-		background-color: $input-bg-color;
-		color: $text-black;
-		padding: 10px;
-		border-radius: $border-radius;
-		display: block;
-		border: none;
+		@include input;
 	}
 }
 
@@ -55,7 +49,7 @@
 	text-align: right;
 
 	a {
-		color: $text-black;
+		color: $textColor2;
 
 		&:hover {
 			text-decoration: underline;
