--- a/client/src/components/UserPanel/style.module.scss
+++ b/client/src/components/UserPanel/style.module.scss
@@ -27,7 +27,7 @@
 			border-radius: 50%;
 			object-fit: cover;
 			transition: transform 0.3s ease;
-			border: 2px solid $blue2;
+			border: 2px solid $themeInverseColor;
 
 			&.hovered,
 			&:hover {
@@ -59,16 +59,6 @@
 			position: relative;
 			text-align: center;
 			width: 100%;
-
-			// &::after {
-			// 	content: '';
-			// 	position: absolute;
-			// 	bottom: -2px;
-			// 	left: 0;
-			// 	width: 100%;
-			// 	height: 2px;
-			// 	background-color: $primary-color;
-			// }
 		}
 
 		.user-email {
@@ -76,19 +66,9 @@
 			position: relative;
 			font-style: italic;
 			text-align: center;
-
-			// &::after {
-			// 	content: '';
-			// 	position: absolute;
-			// 	bottom: -2px;
-			// 	left: 0;
-			// 	width: 100%;
-			// 	height: 2px;
-			// background-color: $primary-color;
-			// }
 		}
 		hr {
-			color: $blue2;
+			color: $primaryColor;
 		}
 	}
 }
