--- a/client/src/components/PopUp/style.module.scss
+++ b/client/src/components/PopUp/style.module.scss
@@ -24,8 +24,8 @@
 		color: $black;
 		background-color: $white;
 		position: absolute;
-		top: 0.5rem;
-		right: 0.5rem;
+		top: 0.5vw;
+		right: 0.5vw;
 		border-radius: $border-radius;
 	}
 }
