--- a/client/src/Pages/HomePage/style.module.scss
+++ b/client/src/Pages/HomePage/style.module.scss
@@ -10,159 +10,177 @@
 	@include main-box;
 
 	display: grid;
-	grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: repeat(5, 1fr);
 	grid-template-columns: repeat(5, 1fr);
+	grid-template-areas:
+		' header header features features user joinRoom'
+		' header header features features user joinRoom'
+		' header header features features imageDiv imageDiv'
+		' header header features features imageDiv imageDiv'
+		' cta cta demo demo imageDiv imageDiv';
 	gap: $gap;
 }
-.container {
+
+.header {
+	grid-area: header;
+
 	@include flex-center;
 	flex-direction: column;
-	justify-content: space-between;
 
-	grid-row: 1 / span 3;
-	grid-column: 1 / span 3;
-
-	.about {
-		flex-grow: 1;
+	h1 {
 		@include flex-center;
-		justify-content: space-between;
-		width: 100%;
-		max-height: 80%;
+		flex-direction: column;
+		gap: 0px;
 
-		.header {
-			// @include common-box;
-			@include flex-center;
-			flex-direction: column;
+		color: $textColor2;
 
-			height: 100%;
-			text-align: center;
-
-			max-width: 50%;
-
-			.headerContent {
-				@include flex-center;
-				flex-direction: column;
-				height: 100%;
-				h1 {
-					flex: 1;
-					@include flex-center;
-					flex-direction: column;
-					gap: 0px;
-					color: $textColor2;
-
-					font-size: 2rem;
-					b {
-						font-size: 2.5rem;
-						color: $textColor1;
-					}
-					i {
-						font-size: 1rem;
-					}
-				}
-				img {
-					width: 100%;
-					object-fit: cover;
-					border-radius: $border-radius;
-				}
-			}
+		font-size: calc($fontSize2 * 2);
+		b {
+			font-size: calc($fontSize2 * 2.5);
+			color: $textColor1;
 		}
-		.features {
-			flex-grow: 1;
-			@include flex-center;
-			flex-direction: column;
-			justify-content: space-evenly;
-
-			width: 50%;
-
-			flex-wrap: nowrap;
-			.feature {
-				@include common-box;
-				border-color: $themeInverseColor;
-				width: 90%;
-				h2 {
-					font-size: 1rem;
-				}
-				p {
-					font-size: 0.8rem;
-					text-align: right;
-				}
-			}
-			& :nth-child(odd) {
-				margin-right: auto;
-			}
-			& :nth-child(even) {
-				margin-left: auto;
-			}
+		i {
+			font-size: $fontSize2;
 		}
 	}
-
-	.cta {
-		@include common-box;
-		border: none;
-		padding: $border-padding 0px;
-		@include flex-center;
-		justify-content: space-evenly;
-		max-height: 20%;
+	img {
 		width: 100%;
-		text-align: center;
-
-		h2 {
-			max-width: 50%;
-		}
-		p {
-			max-width: 50%;
-		}
+		object-fit: cover;
 	}
 }
+// }
+.features {
+	grid-area: features;
 
-.user,
-.demo {
-	grid-row: 1;
-	grid-column: 4;
-
-	@include common-box;
 	@include flex-center;
 	flex-direction: column;
+	// align-items: center;
 
-	margin: $border-padding 0px 0px $border-padding;
-
-	.profileImage {
-		border-radius: 50%;
-		object-fit: cover;
-		width: 8rem;
-		height: 8rem;
-		object-fit: cover;
-		transition: transform 0.3s ease;
-		border: 2px solid $textColor1;
-
-		&:hover {
-			transform: scale(1.1);
+	.feature {
+		@include common-box;
+		border-color: $themeInverseColor;
+		width: 90%;
+		h2 {
+			font-size: $fontSize2;
+		}
+		p {
+			font-size: $fontSize3;
+			text-align: right;
 		}
 	}
-	p {
-		max-width: 95%;
+	& :nth-child(odd) {
+		margin-right: auto;
+	}
+	& :nth-child(even) {
 		margin-left: auto;
 	}
 }
 
-.joinroom {
+.joinroom,
+.user,
+.demo {
 	@include common-box;
 	@include flex-center;
-	align-items: stretch;
-	margin: $border-padding $border-padding 0px 0px;
+	flex-direction: column;
+	padding: $border-padding;
+	height: 100%;
+	$gap: 0px;
+}
+
+.user {
+	grid-area: user;
+
+	.profileImage {
+		border-radius: 50%;
+		width: calc($fontSize2 * 5);
+		height: calc($fontSize2 * 5);
+		transition: transform 0.3s ease;
+		border: 2px solid $textColor1;
+		&:hover {
+			transform: scale(1.1);
+		}
+	}
+	h2 {
+		font-size: $fontSize2;
+	}
+	p {
+		@include flex-center;
+		flex-direction: column;
+		font-size: $fontSize3;
+	}
+}
+.joinroom {
+	grid-area: joinRoom;
+}
+.demo {
+	grid-area: demo;
+	border: none;
+
+	h2 {
+		font-size: $fontSize2;
+	}
+	p {
+		font-size: $fontSize3;
+	}
+}
+
+// }
+.cta {
+	grid-area: cta;
+	@include common-box;
+	@include flex-center;
+	border: none;
 }
 
 .imageDiv {
-	grid-row: 2 / span 2;
-	grid-column: 4 / span 2;
+	grid-area: imageDiv;
 
 	@include common-box;
 	padding: 0px;
-	border-radius: 50px;
+	// border-radius: 50px;
+	border: none;
+
+	@include flex-center;
 
 	img {
 		width: 100%;
-		height: 100%;
-		border-radius: 50px;
+		// border-radius: 50px;
+	}
+}
+
+@media (max-width: 768px) {
+	.homepage {
+		grid-template-rows: repeat(6, 1fr);
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-areas:
+			'header header'
+			'features features'
+			'imageDiv imageDiv'
+			'imageDiv imageDiv'
+			'imageDiv imageDiv'
+			'cta demo';
+		max-height: 100vh;
+		box-shadow: none;
+		gap: 0px;
+	}
+	.container {
+		justify-content: space-between;
+	}
+	.features {
+		padding: $border-padding;
+		.feature {
+			h2 {
+				font-size: $fontSize1;
+			}
+			p {
+				font-size: $fontSize2;
+			}
+		}
+	}
+	.user {
+		display: none;
+	}
+	.joinroom {
+		display: none;
 	}
 }
