--- a/client/src/components/Chat/style.module.scss
+++ b/client/src/components/Chat/style.module.scss
@@ -3,22 +3,40 @@
 
 /* Styles */
 .chat {
-	@include flex-center;
-	flex-direction: column;
-	justify-content: flex-end;
-
 	@include main-box;
 	box-shadow: -5px 0px 10px $shadowColor;
 	border-radius: $border-radius 0 0 0;
+	margin: 0px;
 
 	min-width: 200px;
 	max-width: 300px;
 	height: 100%;
+
+	@include flex-center;
+	flex-direction: column;
+	overflow: auto;
+
+	position: relative;
+
+	@media (max-width: 768px) {
+		position: fixed;
+		right: 0;
+		top: 10vh;
+		bottom: 0;
+		height: auto;
+		max-width: 60%;
+		display: none;
+	}
+}
+.show {
+	display: flex;
 }
 
 .messages {
+	flex-grow: 1;
 	@include flex-center;
 	flex-direction: column;
+	justify-content: flex-end;
 	gap: 0px;
 	padding: 0;
 	margin: 0;
@@ -27,12 +45,26 @@
 	width: 100%;
 	flex: 1;
 	list-style-type: none;
-	overflow-y: auto;
+
+	margin-bottom: 2vh;
+	// overflow: auto;
+
+	// border: 2px solid red;
+	li + li {
+		margin-top: 0.5vw;
+	}
 }
 
 .userMessage,
 .otherMessage {
-	@include info;
+	display: flex;
+	gap: 0.5vw;
+	padding: 5px 10px;
+	background-color: $primaryColor4;
+	border-radius: $border-radius;
+	color: $textColor2;
+	font-size: $fontSize2;
+
 	max-width: 90%;
 	overflow-wrap: break-word;
 }
@@ -49,10 +81,14 @@
 
 .form {
 	display: flex;
+	position: sticky;
+	bottom: 0;
 	justify-content: space-between;
 	max-width: 100%;
 	width: 100%;
 	backdrop-filter: blur(10px);
+
+	// border: 2px solid red;
 }
 
 .input {
@@ -63,4 +99,17 @@
 .btn {
 	@include buttons;
 	width: 25%;
+}
+.msgicon {
+	color: $themeInverseColor;
+	font-size: calc($fontSize2 * 2.5);
+	position: fixed;
+	right: 0;
+	top: 10vh;
+	display: none;
+	z-index: 2;
+	@media (max-width: 768px) {
+		// default display
+		display: block;
+	}
 }
