--- a/client/src/components/Footer/style.module.scss
+++ b/client/src/components/Footer/style.module.scss
@@ -6,12 +6,13 @@
 	@include flex-center;
 	justify-content: space-between;
 
+	font-size: $fontSize2;
 	max-width: 100%;
 	max-height: 8vh;
 	min-height: 4vh;
 
 	box-shadow: $footerBorderShadow;
 	border-radius: $footerBorderRadius;
-	padding: 0px 1rem;
+	padding: 0px $border-padding;
 	color: $textColor2;
 }
