--- a/client/src/components/Navbar/style.module.scss
+++ b/client/src/components/Navbar/style.module.scss
@@ -7,11 +7,19 @@
 	justify-content: space-between;
 
 	max-width: 100vw;
-	max-height: 8vh;
+	position: sticky;
+	top: 0px;
+	min-height: 5vh;
 
 	box-shadow: $navBorderShadow;
 	border-radius: 0px 0px $border-radius $border-radius;
-	padding: 0px 1rem;
+	padding: $border-padding;
+
+	@media screen and (min-width: 768px) {
+		position: static;
+		max-height: 8vh;
+		padding: 0px $border-padding;
+	}
 }
 .navHeader {
 	@include flex-center;
@@ -19,7 +27,7 @@
 	h1 {
 		color: $textColor2;
 		font-style: italic;
-		font-size: $navheadingsize;
+		font-size: calc($fontSize2 * 2);
 	}
 
 	.navToggle {
@@ -28,8 +36,10 @@
 		cursor: pointer;
 		transition: $transition;
 
-		@media screen and (min-width: 800px) {
+		@media screen and (min-width: 768px) {
 			display: none;
+			max-height: 8vh;
+			padding: 0px $border-padding;
 		}
 	}
 }
@@ -44,47 +54,124 @@
 }
 
 .links {
-	@include flex-center;
-	justify-content: space-between;
-	height: 0;
 	display: none;
-	transition: $transition;
 
-	@media screen and (min-width: 800px) {
-		height: auto;
-		display: flex;
+	@media screen and (min-width: 768px) {
+		@include flex-center;
+		justify-content: space-between;
+		transition: $transition;
+		li {
+			font-size: $fontSize2;
+			color: $textColor2;
+			text-transform: capitalize;
+			letter-spacing: $spacing;
+			padding: 0.5vw 0.5vw;
+			border-radius: $border-radius;
+			transition: $transition;
+			white-space: nowrap;
+
+			&:hover {
+				color: $primaryColor2;
+				background: $primaryColor;
+			}
+		}
+	}
+}
+.navCon {
+	display: none;
+}
+@keyframes slideFromTop {
+	from {
+		top: 0px; /* Starting position */
+		opacity: 0; /* Initially transparent */
+	}
+	to {
+		top: 5vh; /* Final position */
+		opacity: 0.9; /* Fully opaque */
+	}
+}
+.show {
+	display: flex;
+	flex-direction: column;
+	gap: $gap;
+	padding: 40px;
+	position: absolute;
+	z-index: 1;
+	// top: 4vh;
+	left: 0;
+	right: 0;
+	min-height: 50vh;
+
+	background-color: $themeColor;
+	border: 2px solid $themeInverseColor;
+
+	animation: slideFromTop 0.3s forwards;
+
+	.user {
+		@include flex-center;
+		@include common-box;
+		justify-content: space-evenly;
+		img {
+			width: calc($fontSize2 * 7);
+			height: calc($fontSize2 * 7);
+		}
+		span {
+			@include flex-center;
+			flex-direction: column;
+			max-width: 60%;
+			h2 {
+				color: $textColor2;
+				font-size: calc($fontSize2 * 2);
+			}
+		}
 	}
 
-	li {
-		color: $textColor2;
-		text-transform: capitalize;
-		letter-spacing: $spacing;
-		padding: 0.5rem 0.5rem;
-		border-radius: $border-radius;
-		transition: $transition;
-		//do not break words
-		white-space: nowrap;
+	.links {
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
 
-		&:hover {
-			color: $primaryColor2;
-			background: $primaryColor;
+		li {
+			text-transform: capitalize;
+			letter-spacing: $spacing;
+
+			font-size: calc($fontSize2 * 1.8);
+			color: $textColor2;
+
+			padding: 0.5vw 0.5vw;
+			border-radius: $border-radius;
+			transition: $transition;
+			white-space: nowrap;
+
+			&:hover {
+				color: $primaryColor2;
+				background: $primaryColor;
+			}
+		}
+		li + li {
+			margin-top: $fontSize1;
 		}
 	}
 }
 
 .icon {
 	@include icon;
+	font-size: calc($fontSize2 * 2);
 }
 
 span {
 	p {
+		color: $textColor2;
+		font-size: $fontSize2;
 		text-align: center;
 	}
 }
 
 .profileImage {
-	width: 2.5rem;
-	height: 2.5rem;
+	width: calc($fontSize2 * 2.5);
+	height: calc($fontSize2 * 2.5);
 	border-radius: 50%;
 }
 
