--- a/client/src/components/UserPanel/style.module.scss
+++ b/client/src/components/UserPanel/style.module.scss
@@ -8,6 +8,11 @@
 	justify-content: flex-end;
 	width: 100%;
 	height: 100%;
+	@media screen and (max-width: 768px) {
+		flex-direction: row;
+		justify-content: space-evenly;
+		gap: $gap;
+	}
 }
 .profile {
 	@include flex-center;
@@ -22,8 +27,8 @@
 		margin-right: 20px;
 
 		.user-image {
-			width: 10rem;
-			height: 10rem;
+			width: 10vw;
+			height: 10vw;
 			border-radius: 50%;
 			object-fit: cover;
 			transition: transform 0.3s ease;
@@ -45,7 +50,7 @@
 			@include flex-center;
 
 			cursor: pointer;
-			font-size: 1rem;
+			font-size: $fontSize2;
 		}
 	}
 
@@ -53,7 +58,8 @@
 		width: 100%;
 
 		.user-name {
-			font-size: 2rem;
+			font-size: calc($fontSize2 * 2);
+			color: $textColor2;
 			font-weight: bold;
 			margin-bottom: 5px;
 			position: relative;
@@ -62,7 +68,8 @@
 		}
 
 		.user-email {
-			font-size: 1rem;
+			font-size: $fontSize2;
+			color: $textColor2;
 			position: relative;
 			font-style: italic;
 			text-align: center;
@@ -70,6 +77,9 @@
 		hr {
 			color: $primaryColor;
 		}
+	}
+	@media screen and (max-width: 768px) {
+		width: 45%;
 	}
 }
 
@@ -80,9 +90,12 @@
 	border-radius: 10px;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 	padding: 20px 15px;
-	font-size: 16px;
+	font-size: $fontSize2;
 	line-height: 1.5;
 	resize: vertical;
+	@media screen and (max-width: 768px) {
+		width: 45%;
+	}
 }
 
 .italic {
