--- a/client/src/components/Chat/style.module.scss
+++ b/client/src/components/Chat/style.module.scss
@@ -8,8 +8,8 @@
 	border-radius: $border-radius 0 0 0;
 	margin: 0px;
 
-	min-width: 200px;
-	max-width: 300px;
+	min-width: 15vw;
+	max-width: 18vw;
 	height: 100%;
 
 	@include flex-center;
